# ArduCAM_USB_Camera_Shield

RaspberryPi/Cpp/External_trigger_demo/: .gitignore  ArduCam_Ext_Trigger_Demo.cpp  CMakeLists.txt  README.md  Utils.cpp  Utils.h  arducam_config_parser.c  arducam_config_parser.h
RaspberryPi/Cpp/External_trigger_demo/Arducam_SDK/: README.md  libArduCamLib.so.2.0.0
